1999-01-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* HDF5Object.[hm], defobj.h (HDF5CompoundType): New type.

	* defobj.m (_defobj_implement): Call setTypeImplemented for HDF5
	and HDF5CompoundType.

	* internal.[hm] (alignment_for_objc_type, size_for_objc_type,
	alignto): Moved from DefClass.m (formerly type_alignment, type_size,
	align).
	(map_ivars): Moved from DefObject.m.

	* DefClass.m: Include internal.h.
	(addVariable): Use alignment_for_objc_type, size_for_objc_type, and
	alignto.

	* HDF5Object.m (ref_string): Handler for const char * -> HDF5 string
	conversion.
	([HDF -createEnd]): Ensure that ref_string is installed.
	([HDF -drop]): Drop ref_string if converters installed.
	Call super drop.

	* defobj.h (HDF5): New protocol.

	* Makefile.am (SRC): Add HDF5Object.m.
	(defobj_HEADERS): Add HDF5Object.h.

	* HDF5.[hm]: New files split out from Archiver.[hm].

	* internal.m (process_array): Add baseType argument to setup_array.
	Don't permute over array if no output_type.  Don't call any
	NULL function argument.  Remove end_array argument.

	* DefObject.m (lisp_output_type): Return nothing.
	(lisp_end_array): Removed.
	(lisp_array_output_type): Remove end_array argument.
	(lisp_setup_array): Add third argument for base type.

	* Archiver.m: Include internal.h.
	(hdf5_tid_for_objc_type): New function.
	([HDF -storeAsDataset:type:ptr:]): Add support for strings and arrays.

	* Makefile.am (SRC): Add internal.m.
	(EXTRA_DIST): Add internal.h.

	* DefObject.m: Include internal.h.

	* internal.m (process_array, nil_method): Moved from DefObject.m.
	Add dims argument to start_array.  Remove arguments to end_array
	and end_dim.

	* internal.[hm]: New files.

1999-01-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefObject.m (map_ivars): New function.
	([Object_s -lispOut:deep:]): Use it.
	([Object_s -hdf5Out:deep:]): New method (also use map_ivars).

	* Archiver.m ([HDF -setName:], [HDF -storeAsDataset:type:ptr:],
	[HDF -drop]): New methods.